@@ -7,6 +7,7 @@ What's New for OpenJPEG
 
 August 10, 2011
 ! [mickael] removed unused parameters warnings with the solution proposed by myself and Bob Friesenhahn.
+! [mickael] add copyright header into new test functions.
 
 August 9, 2011
 - [antonin] removed xcode project files (cmake and autotools are now the only supported build methods)
